--- a/package.json
+++ b/package.json
@@ -34,5 +34,10 @@
     "vite": "^6.3.3",
     "vite-tsconfig-paths": "^5.1.4",
     "wrangler": "^4.24.0"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.43.0",
+    "@tailwindcss/oxide-linux-x64-gnu": "^4.0.1",
+    "lightningcss-linux-x64-gnu": "^1.29.1"
   }
 }
